# CompressedGameNotation

./: .gitignore  .gitmodules  Cargo.toml  JOURNAL.md  LICENSE  README.md  ai.ipynb  benchmark.ipynb  notes.md  opening.ipynb  opening_moves.txt  output3.txt  output4.txt  output8.txt
.github/workflows/: coverage.yml  rust.yml  tests.yml
benchmarking/: README.md  entropy.ipynb  entropy.py
benchmarking/geneticAlgorithm/: geneticAlgorithmPlotter.ipynb  output12.txt  output13.txt  output14.txt  output2.txt
cgn/: .gitignore  Cargo.toml  lcov.info  output.txt  output10.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
cgn-cli/: Cargo.toml
cgn-extension/: cgn.js  cgn_bg.wasm  index.css  index.html  index.js  manifest.json
cgn/benches/: benchmark.rs  utils.rs
cgn/src/: benchmark.rs  benchmark_utils.rs  cgn.rs  compression.rs  eval.rs  genetic_algorithm.rs  lib.rs  main.rs  metrics.rs  pgn.rs  pgn.txt  pgn_data.rs  pgn_db_iter.rs  pgn_examples.rs  pgn_vistor.rs  san_plus_wrapper.rs
cgn/src/compression/: ans.rs  asn.rs  bincode.rs  bincode_zlib.rs  dynamic_huffman.rs  huffman.rs  mod.rs  opening_huffman.rs  test.rs
cgn/src/compression/huffman/: codes.rs  decoder.rs  encoder.rs  huffman_codes.rs  mod.rs  score_move.rs
cgn/src/compression/utils/: huffman_codes.rs  mod.rs  openings.rs  score_move.rs
cgn/src/compression/utils/openings/: a.tsv  mod.rs  sorted_opening_moves.txt
cgn/src/compression_utils/: huffman_codes.rs  mod.rs
cgn/src/pgn_data/: mod.rs  pgn_vistor.rs  san_plus_wrapper.rs
cgn/testDBs/: emptyLinesDB.pgn  exampleDB.pgn  nonUtf8DB.pgn
genAlgoOutputs/: output17.txt  output5.txt  output7.txt
outputs/: GenAlgoPlotter.ipynb  output10.txt  output11.txt  output15.txt  output6.txt  output9.txt
(+4 files in other folders)
