[package]
name = "cgn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cgn"
path = "src/lib.rs"
# crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.27"
pgn-reader = "0.25.0"
serde = { version = "1.0.188", features = ["derive"] }
textwrap = "0.16.0"
wasm-bindgen = "0.2.87"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false