[package]
name = "cgn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cgn"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
arcode = "0.2.4"
bincode = "1.3.3"
bit-vec = "0.6.3"
constriction = "0.3.5"
flate2 = "1.0.27"
huffman-compress = "0.6.1"
paste = "1.0.14"
pgn-reader = "0.25.0"
serde = { version = "1.0.188", features = ["derive"] }
shakmaty = "0.26.0"
textwrap = "0.16.0"
trie-rs = "0.1.1"
wasm-bindgen = "0.2.87"
